--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: python
 python:
   - "3.5"
 install: "pip install -r requirements-dev.txt"
-script: py.test
+script:
+  - py.test
+  - flake8
