User main README for docs, move docs to github pages

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -196,3 +196,7 @@ aiotg.docset:
 
 aiotg.tgz: aiotg.docset
 	tar --exclude='.DS_Store' -cvzf $@ $^
+
+publish: html
+	touch _build/html/.nojekyll
+	gh-pages -td _build/html/
