Added gitignore entry for convenience
Signed-off-by: Diwank Singh <diwank.singh@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 __pycache__
+.venv
 venv
 build
 dist
@@ -11,7 +12,7 @@ aiotg.egg-info
 .LSOverride
 
 # Must end with CRCR (^M^M in vim)
-Icon
+Icon
 
 # Thumbnails
 ._*
