--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
 aiohttp==1.0.0
+async-timeout==1.2.0
+chardet==2.3.0
+multidict==2.1.4
+packaging==16.8
+pkg-resources==0.0.0
+pyparsing==2.2.0
+six==1.10.0
