Fix new flake8 warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 norecursedirs = .git venv .eggs
 
 [flake8]
-exclude=docs, venv, .eggs
+exclude=docs, venv, .eggs, build
 max-line-length = 100
 
 [aliases]
