--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: Test
 
 on: [push]
 
@@ -19,13 +19,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install .
-        pip install black flake8
+        python -m pip install --upgrade pip hatch
     - name: Lint
-      run: |
-        flake8 .
-        black --check --diff .
+      run: hatch run lint:all
     - name: Test
-      run: |
-        python setup.py -q test
+      run: hatch run test:pytest
