--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,13 @@
-- name: pypi-publish
-  if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-  uses: pypa/gh-action-pypi-publish@v1.7.1
-  with:
-    password: ${{ secrets.PYPI_API_TOKEN }}
+name: Publish
+
+on:
+  push:
+    branches:
+    - master
+
+jobs:
+  - name: pypi-publish
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    uses: pypa/gh-action-pypi-publish@v1.7.1
+    with:
+      password: ${{ secrets.PYPI_API_TOKEN }}
