--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,9 @@ on:
     - master
 
 jobs:
-  - name: pypi-publish
+  publish:
+    steps:
+    - name: pypi-publish
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     uses: pypa/gh-action-pypi-publish@v1.7.1
     with:
